<resources>
    <string name="app_name">Ledecorator</string>
    <string name="scan">Scan</string>
    <string name="status_no_device">NO DEVICE</string>
    <string name="status_disconnected">DISCONNECTED</string>
    <string name="status_disconnecting">DISCONNECTING…</string>
    <string name="status_connected">CONNECTED</string>
    <string name="status_connecting">CONNECTING…</string>
    <string name="status_connection_error">ERROR: %1$s</string>
    <string name="scan_devices">Scan Devices</string>
    <string name="cancel">Cancel</string>
    <string name="refresh">Refresh</string>
    <string name="available_devices">Available Devices</string>
    <string name="connect">Connect</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="select">Select</string>
    <string name="stop">Stop</string>
    <string name="ledecorator_app_mode_manual">Manual</string>
    <string name="ledecorator_app_mode_auto">Auto</string>
    <string name="ledecorator_app_status_active">Active</string>
    <string name="ledecorator_app_status_inactive">Inactive</string>
    <string name="update">Update</string>
    <string name="load">Load</string>
    <string name="loading_in_progress">Loading...</string>
    <string name="reset">Reset</string>
    <string name="color">Color</string>
    <string name="write">Write</string>
    <string name="open">Open</string>
    <string name="script">Script</string>
    <string name="mode">Mode</string>
    <string name="dead_color">Dead color</string>
    <string name="live_color">Live color</string>
    <string name="time_to_live">Time to live</string>
    <string name="speed">Speed</string>
    <string name="down">Down</string>
    <string name="up">Up</string>
    <string name="edit">Edit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="field_color">Field Color</string>
    <string name="snake_body_color">Body Color</string>
    <string name="snake_head_color">Head Color</string>
    <string name="food_increment_color">Inc Color</string>
    <string name="food_decrement_color">Dec Color</string>
    <string name="wall_color">Wall Color</string>
    <string name="wall">Wall</string>
    <string name="food_speed_down_color">Speed Down Color</string>
    <string name="food_speed_up_color">Speed Up Color</string>
    <string name="snake_dead_color">Dead Color</string>
    <string name="set_time">Set Time</string>
    <string name="time_color">Time Color</string>
    <string name="seconds_color">Seconds Color</string>
    <string name="date_color">Date Color</string>
    <string name="background">Background</string>
</resources>
