<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".apps.snake.SnakeGameManualFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/snakeGameSettingsControlsView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:layout_marginVertical="3dp"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/field_color" />
                    <Button
                        android:id="@+id/snakeGameSettingsFieldColorButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.67"
                        android:layout_marginVertical="3dp"
                        android:layout_marginHorizontal="20dp"
                        style="?android:attr/buttonBarButtonStyle" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:layout_marginVertical="3dp"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/snake_head_color" />
                    <Button
                        android:id="@+id/snakeGameSettingsSnakeHeadColorButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.67"
                        android:layout_marginVertical="3dp"
                        android:layout_marginHorizontal="20dp"
                        style="?android:attr/buttonBarButtonStyle" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:layout_marginVertical="3dp"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/snake_body_color" />
                    <Button
                        android:id="@+id/snakeGameSettingsSnakeBodyColorButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.67"
                        android:layout_marginVertical="3dp"
                        android:layout_marginHorizontal="20dp"
                        style="?android:attr/buttonBarButtonStyle" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:layout_marginVertical="3dp"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/snake_dead_color" />
                    <Button
                        android:id="@+id/snakeGameSettingsSnakeDeadColorButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.67"
                        android:layout_marginVertical="3dp"
                        android:layout_marginHorizontal="20dp"
                        style="?android:attr/buttonBarButtonStyle" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:layout_marginVertical="3dp"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/food_increment_color" />
                    <Button
                        android:id="@+id/snakeGameSettingsFoodIncrementColorButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.67"
                        android:layout_marginVertical="3dp"
                        android:layout_marginHorizontal="20dp"
                        style="?android:attr/buttonBarButtonStyle" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:layout_marginVertical="3dp"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/food_decrement_color" />
                    <Button
                        android:id="@+id/snakeGameSettingsFoodDecrementColorButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.67"
                        android:layout_marginVertical="3dp"
                        android:layout_marginHorizontal="20dp"
                        style="?android:attr/buttonBarButtonStyle" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:layout_marginVertical="3dp"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/food_speed_up_color" />
                    <Button
                        android:id="@+id/snakeGameSettingsFoodSpeedUpColorButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.67"
                        android:layout_marginVertical="3dp"
                        android:layout_marginHorizontal="20dp"
                        style="?android:attr/buttonBarButtonStyle" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:layout_marginVertical="3dp"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/food_speed_down_color" />
                    <Button
                        android:id="@+id/snakeGameSettingsFoodSpeedDownColorButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.67"
                        android:layout_marginVertical="3dp"
                        android:layout_marginHorizontal="20dp"
                        style="?android:attr/buttonBarButtonStyle" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:layout_marginVertical="3dp"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/wall_color" />
                    <Button
                        android:id="@+id/snakeGameSettingsWallColorButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.67"
                        android:layout_marginVertical="3dp"
                        android:layout_marginHorizontal="20dp"
                        style="?android:attr/buttonBarButtonStyle" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:layout_marginVertical="3dp"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/wall" />
                    <Spinner
                        android:id="@+id/snakeGameSettingsWallSelector"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.67"
                        android:layout_marginVertical="3dp"
                        android:layout_marginHorizontal="20dp"
                        style="?android:attr/buttonBarButtonStyle" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:layout_marginVertical="3dp"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/time_to_live" />
                    <EditText
                        android:id="@+id/snakeGameSettingsTimeToLiveEditView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.67"
                        android:layout_marginVertical="3dp"
                        android:layout_marginHorizontal="20dp"
                        android:inputType="numberSigned"
                        style="?android:attr/buttonBarButtonStyle" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:layout_marginVertical="3dp"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/speed" />
                    <Spinner
                        android:id="@+id/snakeGameSettingsSpeedSelector"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.67"
                        android:layout_marginVertical="3dp"
                        android:layout_marginHorizontal="20dp"
                        style="?android:attr/buttonBarButtonStyle" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/snakeGameSettingsControlsView"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/snakeGameSettingsSaveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:text="@string/save"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/snakeGameSettingsRestartButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:text="@string/reset"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/snakeGameSettingsLoadButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:text="@string/load"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>