<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".apps.sandbox.SandboxAppFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clockAppMainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <org.dragberry.ledecorator.apps.sandbox.FieldView
            android:id="@+id/sandboxFieldImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/sandboxControlsView"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/sandboxControlsView"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/sandboxSavePictureButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:text="@string/save" />

            <Button
                android:id="@+id/sandboxLoadPictureButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:text="@string/load" />

            <Button
                android:id="@+id/sandboxSelectColorButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:text="Color" />

            <Button
                android:id="@+id/sandboxClearScreenButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:text="@string/clear" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>