<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".apps.life.LifeGameFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lifeGameMainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="20dp"
                    android:text="Live color" />
                <Button
                    android:id="@+id/lifeGameLiveColorButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="20dp"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="20dp"
                    android:text="Dead color" />
                <Button
                    android:id="@+id/lifeGameDeadColorButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="20dp"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="20dp"
                    android:text="Dead color" />
                <Spinner
                    android:id="@+id/lifeGameModeSelector"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="20dp"
                    style="?android:attr/buttonBarButtonStyle"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lifeGameControlsView"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/lifeGameSaveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:text="@string/save"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/lifeGameRestartButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:text="@string/reset"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/lifeGameLoadButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:text="@string/load"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>